feat: UX enhancement - i18n compliance, skeleton loading, health badges, formula builder
Phase 1 (P0): i18n compliance
- Wrapped ~60 hardcoded strings across 6 components
- Added 130+ keys in 6 namespaces to es/en/eu locales
- Deduplicated TimeseriesChart (removed dead analytics/ copy)

Phase 2 (P1): Visual polish
- Created SkeletonCard.tsx (chart/stats/table variants)
- Replaced TabLoadingFallback spinner with skeleton cards
- Added NDVI health badges to dashboard parcel table

Phase 3 (P2): Formula builder
- Color-coded Sentinel-2 band chips (VIS/NIR/SWIR)
- Operator buttons and NDVI/EVI/SAVI preset insertion
- Visual paren-balance validation (green/red border)
- Wrapped remaining hardcoded strings in VegetationConfig

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -26,7 +26,9 @@
         "analyze": "Analyze",
         "noParcels": "No parcels found associated with your account.",
         "loadingParcels": "Loading parcels...",
-        "unassigned": "Unassigned"
+        "unassigned": "Unassigned",
+        "detailAnalysis": "Detailed analysis",
+        "health": "Health"
     },
     "tabs": {
         "analytics": "Analytics",
@@ -95,6 +97,28 @@
             "limit": "Limit"
         }
     },
+    "configPanel": {
+        "indexAndCalc": "Index & Calculation",
+        "analysisPeriod": "Analysis Period",
+        "recommendedIndex": "Recommended index:",
+        "validIndices": "Valid: {{indices}}",
+        "customFormula": "Custom Formula",
+        "formulaPlaceholder": "E.g.: (B08 - B04) / (B08 + B04)",
+        "bands": "Bands",
+        "operators": "Operators",
+        "presets": "Presets",
+        "clear": "Clear",
+        "exportMap": "Export Map",
+        "openInVegetation": "Open in Vegetation",
+        "advancedOptions": "Advanced Options",
+        "copernicusCredentials": "Copernicus Credentials",
+        "credentialsHint": "Leave blank to use platform credentials.",
+        "recentActivity": "Recent Activity",
+        "noRecentActivity": "No recent activity.",
+        "advancedConfig": "Advanced Configuration",
+        "vegetationAnalysis": "Vegetation Analysis",
+        "carbonCalcLUE": "Carbon Calculation (LUE)"
+    },
     "prescription": {
         "title": "Prescription Maps",
         "generate": "Generate Map",
@@ -141,6 +165,115 @@
         "saveAsParcel": "Save as Parcel",
         "vraReady": "Ready for Variable Rate Application",
         "noZones": "No zones generated"
+    },
+    "setup": {
+        "configureMonitoring": "Configure Monitoring: {{name}}",
+        "back": "Back",
+        "continue": "Continue",
+        "activating": "Activating...",
+        "activateMonitoring": "Activate Monitoring",
+        "stepParcel": "Parcel",
+        "stepConfig": "Configuration",
+        "stepConfirm": "Confirm",
+        "activateAutoMonitoring": "Activate Automatic Monitoring",
+        "autoMonitoringDesc": "We will configure automatic satellite image downloads and weekly vegetation index calculations for this parcel.",
+        "fetchingGeometry": "Fetching parcel geometry...",
+        "geometryError": "Could not retrieve parcel geometry.",
+        "entityLoadError": "Error loading parcel data.",
+        "selectedParcel": "Selected parcel:",
+        "startDateLabel": "Monitoring start date",
+        "startDateHelp": "We will search for Sentinel-2 images from this date. We recommend at least 21 days to ensure availability.",
+        "shortRange": "Short range ({{days}} days)",
+        "shortRangeWarning": "Sentinel-2 passes every 5 days. With clouds, images may not be available. We recommend at least 14-21 days.",
+        "indicesLabel": "Indices to calculate automatically",
+        "frequencyLabel": "Update frequency",
+        "weeklyRecommended": "Weekly (Recommended)",
+        "dailyCredits": "Daily (Uses more credits)",
+        "summaryTitle": "Configuration Summary",
+        "summaryParcel": "Parcel:",
+        "summaryStartDate": "Historical Start:",
+        "summaryIndices": "Indices:",
+        "summaryFrequency": "Frequency:",
+        "summaryWeekly": "Weekly",
+        "summaryDaily": "Daily",
+        "activateDesc": "By clicking \"Activate\", the system will begin to:",
+        "activateStep1": "Search for available historical satellite images.",
+        "activateStep2": "Calculate the selected indices.",
+        "activateStep3": "Schedule the next automatic updates.",
+        "activateNote": "Note: The initial process may take a few minutes depending on the selected date range. You will receive a notification when the data is ready.",
+        "validationError": "Invalid data (422). Check the console for more details.",
+        "saveError": "Error saving configuration",
+        "missingGeometry": "Parcel geometry is missing. Cannot continue."
+    },
+    "timeline": {
+        "loadingHistory": "Loading history...",
+        "noDataAvailable": "No data available for the selected period",
+        "evolution": "{{index}} Evolution",
+        "improving": "Improving",
+        "declining": "Declining",
+        "stable": "Stable",
+        "current": "Current",
+        "mean": "Mean",
+        "range": "Range",
+        "clouds": "Clouds",
+        "previousYear": "Previous year",
+        "loadingData": "Loading data...",
+        "errorLoadingData": "Error loading data",
+        "noDataTitle": "No data available",
+        "noDataHint": "Try a different index or date",
+        "timeseriesTitle": "Timeseries: {{index}}",
+        "dataPoints": "{{count}} data points (last 12 months)",
+        "latestValue": "Latest value"
+    },
+    "analyticsPage": {
+        "loginRequired": "Please log in to view analytics.",
+        "noParcelSelected": "No parcel selected.",
+        "noParcelHint": "Select a recently analyzed parcel below or use the map.",
+        "recentParcels": "Recently Analyzed Parcels",
+        "loadingHistory": "Loading history...",
+        "noHistory": "No analysis history found.",
+        "parcelAnalysis": "Parcel Analysis",
+        "changeParcel": "Change Parcel",
+        "inactiveMonitoring": "Inactive Monitoring",
+        "inactiveMonitoringDesc": "This parcel does not have automatic monitoring enabled. Set it up to download historical imagery and receive weekly updates.",
+        "configureMonitoring": "Configure Monitoring",
+        "manualHistory": "Manual History",
+        "analyticsDashboard": "Analytics Dashboard",
+        "processingHistoric": "Processing Historical Data",
+        "processingHistoricDesc": "We are downloading and processing historical Sentinel-2 imagery for your parcel. This may take a few minutes.",
+        "syncing": "Syncing...",
+        "activeMonitoring": "Active Monitoring",
+        "resolutionNote": "Resolution Note:",
+        "resolutionNoteDesc": "For small entities (< 100m²), the Sentinel-2 index represents \"Zonal Vigor\" and not precise individual health.",
+        "vegetationTrends": "Vegetation Trends ({{index}})",
+        "historicEvolution": "Historic index evolution",
+        "lastUpdate": "Last update:",
+        "pending": "Pending",
+        "yearComparison": "Year-over-Year Comparison",
+        "yearComparisonDesc": "Same period in previous years",
+        "year": "Year",
+        "mean": "Mean",
+        "diff": "Diff.",
+        "loadingData": "Loading data...",
+        "noHistoricData": "Insufficient historical data",
+        "quickStats": "Quick Statistics",
+        "loadingStats": "Loading statistics...",
+        "selectParcelForStats": "Select a parcel to view statistics",
+        "anomalyDetection": "Anomaly Detection",
+        "from": "From",
+        "to": "To",
+        "analyzing": "Analyzing...",
+        "searchAnomalies": "Search Anomalies",
+        "anomaliesFound": "{{count}} anomalies found:",
+        "anomalyLow": "↓ Low",
+        "anomalyHigh": "↑ High",
+        "anomalySudden": "⚡ Sudden change",
+        "noAnomalies": "No anomalies detected in the selected period",
+        "indexPrediction": "Index Prediction",
+        "loadingPredictions": "Loading predictions...",
+        "predictionModel": "Model: {{model}} | Next 7 days",
+        "noPredictions": "No predictions available for this parcel",
+        "predictionsUnavailable": "Predictions unavailable for this tenant"
     },
     "errors": {
         "loadFailed": "Failed to load data",
