--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -26,7 +26,9 @@
         "analyze": "Analizar",
         "noParcels": "No se encontraron parcelas asociadas a tu cuenta.",
         "loadingParcels": "Cargando parcelas...",
-        "unassigned": "Sin asignar"
+        "unassigned": "Sin asignar",
+        "detailAnalysis": "Análisis detallado",
+        "health": "Salud"
     },
     "tabs": {
         "analytics": "Análisis",
@@ -95,6 +97,28 @@
             "limit": "Límite"
         }
     },
+    "configPanel": {
+        "indexAndCalc": "Índice & Cálculo",
+        "analysisPeriod": "Periodo de Análisis",
+        "recommendedIndex": "Índice recomendado:",
+        "validIndices": "Válidos: {{indices}}",
+        "customFormula": "Fórmula Personalizada",
+        "formulaPlaceholder": "Ej: (B08 - B04) / (B08 + B04)",
+        "bands": "Bandas",
+        "operators": "Operadores",
+        "presets": "Presets",
+        "clear": "Limpiar",
+        "exportMap": "Exportar Mapa",
+        "openInVegetation": "Abrir en Vegetation",
+        "advancedOptions": "Opciones Avanzadas",
+        "copernicusCredentials": "Credenciales Copernicus",
+        "credentialsHint": "Dejar en blanco para usar credenciales de plataforma.",
+        "recentActivity": "Actividad Reciente",
+        "noRecentActivity": "No hay actividad reciente.",
+        "advancedConfig": "Configuración Avanzada",
+        "vegetationAnalysis": "Análisis de Vegetación",
+        "carbonCalcLUE": "Cálculo de Carbono (LUE)"
+    },
     "prescription": {
         "title": "Mapas de Prescripción",
         "generate": "Generar Mapa",
@@ -141,6 +165,115 @@
         "saveAsParcel": "Guardar como Parcela",
         "vraReady": "Listo para Aplicación Variable",
         "noZones": "No hay zonas generadas"
+    },
+    "setup": {
+        "configureMonitoring": "Configurar Monitoreo: {{name}}",
+        "back": "Atrás",
+        "continue": "Continuar",
+        "activating": "Activando...",
+        "activateMonitoring": "Activar Monitoreo",
+        "stepParcel": "Parcela",
+        "stepConfig": "Configuración",
+        "stepConfirm": "Confirmar",
+        "activateAutoMonitoring": "Activar Monitoreo Automático",
+        "autoMonitoringDesc": "Vamos a configurar la descarga automática de imágenes satelitales y el cálculo semanal de índices de vegetación para esta parcela.",
+        "fetchingGeometry": "Obteniendo geometría de la parcela...",
+        "geometryError": "No se pudo obtener la geometría de la parcela.",
+        "entityLoadError": "Error al cargar datos de la parcela.",
+        "selectedParcel": "Parcela seleccionada:",
+        "startDateLabel": "Fecha de inicio de monitoreo",
+        "startDateHelp": "Buscaremos imágenes de Sentinel-2 desde esta fecha. Recomendamos mínimo 21 días para garantizar disponibilidad.",
+        "shortRange": "Rango corto ({{days}} días)",
+        "shortRangeWarning": "Sentinel-2 pasa cada 5 días. Con nubes, puede que no haya imágenes disponibles. Recomendamos mínimo 14-21 días.",
+        "indicesLabel": "Índices a calcular automáticamente",
+        "frequencyLabel": "Frecuencia de actualización",
+        "weeklyRecommended": "Semanal (Recomendado)",
+        "dailyCredits": "Diaria (Consume más créditos)",
+        "summaryTitle": "Resumen de Configuración",
+        "summaryParcel": "Parcela:",
+        "summaryStartDate": "Inicio Histórico:",
+        "summaryIndices": "Índices:",
+        "summaryFrequency": "Frecuencia:",
+        "summaryWeekly": "Semanal",
+        "summaryDaily": "Diaria",
+        "activateDesc": "Al hacer clic en \"Activar\", el sistema comenzará a:",
+        "activateStep1": "Buscar imágenes satelitales históricas disponibles.",
+        "activateStep2": "Calcular los índices seleccionados.",
+        "activateStep3": "Programar las próximas actualizaciones automáticas.",
+        "activateNote": "Nota: El proceso inicial puede tomar unos minutos dependiendo del rango de fechas seleccionado. Recibirás una notificación cuando los datos estén listos.",
+        "validationError": "Datos inválidos (422). Revisa la consola para más detalles.",
+        "saveError": "Error al guardar la configuración",
+        "missingGeometry": "Falta la geometría de la parcela. No se puede continuar."
+    },
+    "timeline": {
+        "loadingHistory": "Cargando historial...",
+        "noDataAvailable": "No hay datos disponibles para el período seleccionado",
+        "evolution": "Evolución {{index}}",
+        "improving": "Mejorando",
+        "declining": "Decreciendo",
+        "stable": "Estable",
+        "current": "Actual",
+        "mean": "Media",
+        "range": "Rango",
+        "clouds": "Nubes",
+        "previousYear": "Año anterior",
+        "loadingData": "Cargando datos...",
+        "errorLoadingData": "Error al cargar datos",
+        "noDataTitle": "No hay datos disponibles",
+        "noDataHint": "Prueba con otro índice o fecha",
+        "timeseriesTitle": "Serie Temporal: {{index}}",
+        "dataPoints": "{{count}} puntos de datos (últimos 12 meses)",
+        "latestValue": "Último valor"
+    },
+    "analyticsPage": {
+        "loginRequired": "Por favor, inicia sesión para ver los análisis.",
+        "noParcelSelected": "No hay parcela seleccionada.",
+        "noParcelHint": "Selecciona una parcela analizada recientemente o usa el mapa.",
+        "recentParcels": "Parcelas Analizadas Recientemente",
+        "loadingHistory": "Cargando historial...",
+        "noHistory": "No se encontró historial de análisis.",
+        "parcelAnalysis": "Análisis de Parcela",
+        "changeParcel": "Cambiar Parcela",
+        "inactiveMonitoring": "Monitoreo Inactivo",
+        "inactiveMonitoringDesc": "Esta parcela no tiene el monitoreo automático activado. Configúralo para descargar imágenes históricas y recibir actualizaciones semanales.",
+        "configureMonitoring": "Configurar Monitoreo",
+        "manualHistory": "Historial Manual",
+        "analyticsDashboard": "Panel de Análisis",
+        "processingHistoric": "Procesando Histórico",
+        "processingHistoricDesc": "Estamos descargando y procesando imágenes históricas de Sentinel-2 para tu parcela. Esto puede tomar unos minutos.",
+        "syncing": "Sincronizando...",
+        "activeMonitoring": "Monitoreo Activo",
+        "resolutionNote": "Nota de Resolución:",
+        "resolutionNoteDesc": "Para entidades pequeñas (< 100m²), el índice Sentinel-2 representa \"Vigor Zonal\" y no salud individual precisa.",
+        "vegetationTrends": "Tendencias de Vegetación ({{index}})",
+        "historicEvolution": "Evolución histórica del índice",
+        "lastUpdate": "Última actualización:",
+        "pending": "Pendiente",
+        "yearComparison": "Comparativa Anual",
+        "yearComparisonDesc": "Mismo periodo en años anteriores",
+        "year": "Año",
+        "mean": "Media",
+        "diff": "Dif.",
+        "loadingData": "Cargando datos...",
+        "noHistoricData": "No hay datos históricos suficientes",
+        "quickStats": "Estadísticas Rápidas",
+        "loadingStats": "Cargando estadísticas...",
+        "selectParcelForStats": "Selecciona una parcela para ver estadísticas",
+        "anomalyDetection": "Detección de Anomalías",
+        "from": "Desde",
+        "to": "Hasta",
+        "analyzing": "Analizando...",
+        "searchAnomalies": "Buscar Anomalías",
+        "anomaliesFound": "Se encontraron {{count}} anomalías:",
+        "anomalyLow": "↓ Bajo",
+        "anomalyHigh": "↑ Alto",
+        "anomalySudden": "⚡ Cambio brusco",
+        "noAnomalies": "No se detectaron anomalías en el periodo seleccionado",
+        "indexPrediction": "Predicción de Índice",
+        "loadingPredictions": "Cargando predicciones...",
+        "predictionModel": "Modelo: {{model}} | Próximos 7 días",
+        "noPredictions": "No hay predicciones disponibles para esta parcela",
+        "predictionsUnavailable": "Predicciones no disponibles para este tenant"
     },
     "errors": {
         "loadFailed": "Error al cargar datos",
