--- a/src/i18n/locales/eu.json
+++ b/src/i18n/locales/eu.json
@@ -26,7 +26,9 @@
         "analyze": "Aztertu",
         "noParcels": "Ez da lurzatirik aurkitu zure kontuarekin lotuta.",
         "loadingParcels": "Lurzatiak kargatzen...",
-        "unassigned": "Esleitu gabe"
+        "unassigned": "Esleitu gabe",
+        "detailAnalysis": "Azterketa zehatza",
+        "health": "Osasuna"
     },
     "tabs": {
         "analytics": "Analisia",
@@ -95,6 +97,28 @@
             "limit": "Muga"
         }
     },
+    "configPanel": {
+        "indexAndCalc": "Indizea & Kalkulua",
+        "analysisPeriod": "Analisi Aldia",
+        "recommendedIndex": "Gomendatutako indizea:",
+        "validIndices": "Baliozkoak: {{indices}}",
+        "customFormula": "Formula Pertsonalizatua",
+        "formulaPlaceholder": "Adib.: (B08 - B04) / (B08 + B04)",
+        "bands": "Bandak",
+        "operators": "Eragileak",
+        "presets": "Aurrez ezarpenak",
+        "clear": "Garbitu",
+        "exportMap": "Esportatu Mapa",
+        "openInVegetation": "Ireki Vegetation-en",
+        "advancedOptions": "Aukera Aurreratuak",
+        "copernicusCredentials": "Copernicus Kredentzialak",
+        "credentialsHint": "Utzi hutsik plataformaren kredentzialak erabiltzeko.",
+        "recentActivity": "Azken Jarduerak",
+        "noRecentActivity": "Ez dago azken jarduerarik.",
+        "advancedConfig": "Konfigurazio Aurreratua",
+        "vegetationAnalysis": "Landaretza Analisia",
+        "carbonCalcLUE": "Karbono Kalkulua (LUE)"
+    },
     "prescription": {
         "title": "Preskripzio Mapak",
         "generate": "Sortu Mapa",
@@ -141,6 +165,115 @@
         "saveAsParcel": "Gorde Lurzati Bezala",
         "vraReady": "Aldakorra Aplikatzeko Prest",
         "noZones": "Ez dago zonalderik sortuta"
+    },
+    "setup": {
+        "configureMonitoring": "Monitorizazioa Konfiguratu: {{name}}",
+        "back": "Atzera",
+        "continue": "Jarraitu",
+        "activating": "Aktibatzen...",
+        "activateMonitoring": "Monitorizazioa Aktibatu",
+        "stepParcel": "Lurzatia",
+        "stepConfig": "Konfigurazioa",
+        "stepConfirm": "Berretsi",
+        "activateAutoMonitoring": "Monitorizazio Automatikoa Aktibatu",
+        "autoMonitoringDesc": "Satelite irudien deskarga automatikoa eta landaretza indizeen asteko kalkulua konfiguratuko dugu lurzati honetarako.",
+        "fetchingGeometry": "Lurzatiaren geometria eskuratzen...",
+        "geometryError": "Ezin izan da lurzatiaren geometria eskuratu.",
+        "entityLoadError": "Errorea lurzatiaren datuak kargatzean.",
+        "selectedParcel": "Hautatutako lurzatia:",
+        "startDateLabel": "Monitorizazio hasiera data",
+        "startDateHelp": "Sentinel-2 irudiak data honetatik bilatuko ditugu. Gutxienez 21 egun gomendatzen ditugu eskuragarritasuna bermatzeko.",
+        "shortRange": "Tarte laburra ({{days}} egun)",
+        "shortRangeWarning": "Sentinel-2 5 egunero pasatzen da. Lainoekin, baliteke irudirik ez egotea. Gutxienez 14-21 egun gomendatzen ditugu.",
+        "indicesLabel": "Automatikoki kalkulatzeko indizeak",
+        "frequencyLabel": "Eguneratze maiztasuna",
+        "weeklyRecommended": "Astero (Gomendatua)",
+        "dailyCredits": "Egunero (Kreditu gehiago kontsumitzen du)",
+        "summaryTitle": "Konfigurazio Laburpena",
+        "summaryParcel": "Lurzatia:",
+        "summaryStartDate": "Hasiera Historikoa:",
+        "summaryIndices": "Indizeak:",
+        "summaryFrequency": "Maiztasuna:",
+        "summaryWeekly": "Astero",
+        "summaryDaily": "Egunero",
+        "activateDesc": "\"Aktibatu\" sakatzen duzunean, sistema honako hauek egiten hasiko da:",
+        "activateStep1": "Satelite irudi historiko eskuragarriak bilatu.",
+        "activateStep2": "Hautatutako indizeak kalkulatu.",
+        "activateStep3": "Hurrengo eguneratze automatikoak programatu.",
+        "activateNote": "Oharra: Hasierako prozesuak minutu batzuk iraun dezake hautatutako data tartearen arabera. Jakinarazpen bat jasoko duzu datuak prest daudenean.",
+        "validationError": "Datu baliogabeak (422). Begiratu kontsola xehetasun gehiagorako.",
+        "saveError": "Errorea konfigurazioa gordetzean",
+        "missingGeometry": "Lurzatiaren geometria falta da. Ezin da jarraitu."
+    },
+    "timeline": {
+        "loadingHistory": "Historia kargatzen...",
+        "noDataAvailable": "Ez dago daturik hautatutako aldirako",
+        "evolution": "{{index}} Eboluzioa",
+        "improving": "Hobetzen",
+        "declining": "Behera egiten",
+        "stable": "Egonkorra",
+        "current": "Unekoa",
+        "mean": "Batezbestekoa",
+        "range": "Tartea",
+        "clouds": "Lainoak",
+        "previousYear": "Aurreko urtea",
+        "loadingData": "Datuak kargatzen...",
+        "errorLoadingData": "Errorea datuak kargatzean",
+        "noDataTitle": "Ez dago daturik eskuragarri",
+        "noDataHint": "Saiatu beste indize edo data batekin",
+        "timeseriesTitle": "Denbora-serie: {{index}}",
+        "dataPoints": "{{count}} datu-puntu (azken 12 hilabeteak)",
+        "latestValue": "Azken balioa"
+    },
+    "analyticsPage": {
+        "loginRequired": "Mesedez, hasi saioa analisiak ikusteko.",
+        "noParcelSelected": "Ez da lurzatirik hautatu.",
+        "noParcelHint": "Hautatu berriki aztertutako lurzati bat behean edo erabili mapa.",
+        "recentParcels": "Berriki Aztertutako Lurzatiak",
+        "loadingHistory": "Historia kargatzen...",
+        "noHistory": "Ez da analisi historiarik aurkitu.",
+        "parcelAnalysis": "Lurzati Analisia",
+        "changeParcel": "Aldatu Lurzatia",
+        "inactiveMonitoring": "Monitorizazio Inaktiboa",
+        "inactiveMonitoringDesc": "Lurzati honek ez du monitorizazio automatikoa aktibatuta. Konfiguratu irudi historikoak deskargatzeko eta asteko eguneratzeak jasotzeko.",
+        "configureMonitoring": "Konfiguratu Monitorizazioa",
+        "manualHistory": "Historia Manuala",
+        "analyticsDashboard": "Analisi Panela",
+        "processingHistoric": "Historikoa Prozesatzen",
+        "processingHistoricDesc": "Sentinel-2 irudi historikoak deskargatzen eta prozesatzen ari gara zure lurzatirako. Minutu batzuk iraun dezake.",
+        "syncing": "Sinkronizatzen...",
+        "activeMonitoring": "Monitorizazio Aktiboa",
+        "resolutionNote": "Bereizmen Oharra:",
+        "resolutionNoteDesc": "Entitate txikientzat (< 100m²), Sentinel-2 indizeak \"Zonal Indarra\" adierazten du eta ez osasun indibiduala.",
+        "vegetationTrends": "Landaretza Joerak ({{index}})",
+        "historicEvolution": "Indizearen eboluzio historikoa",
+        "lastUpdate": "Azken eguneratzea:",
+        "pending": "Zain",
+        "yearComparison": "Urtez Urteko Konparaketa",
+        "yearComparisonDesc": "Aldi bera aurreko urteetan",
+        "year": "Urtea",
+        "mean": "Batezbestekoa",
+        "diff": "Ald.",
+        "loadingData": "Datuak kargatzen...",
+        "noHistoricData": "Ez da datu historiko nahikorik",
+        "quickStats": "Estatistika Azkarrak",
+        "loadingStats": "Estatistikak kargatzen...",
+        "selectParcelForStats": "Hautatu lurzati bat estatistikak ikusteko",
+        "anomalyDetection": "Anomalien Detekzioa",
+        "from": "Noiztik",
+        "to": "Noiz arte",
+        "analyzing": "Aztertzen...",
+        "searchAnomalies": "Bilatu Anomaliak",
+        "anomaliesFound": "{{count}} anomalia aurkitu dira:",
+        "anomalyLow": "↓ Baxua",
+        "anomalyHigh": "↑ Altua",
+        "anomalySudden": "⚡ Bat-bateko aldaketa",
+        "noAnomalies": "Ez da anomaliarik detektatu hautatutako aldian",
+        "indexPrediction": "Indize Iragarpena",
+        "loadingPredictions": "Iragarpenak kargatzen...",
+        "predictionModel": "Modeloa: {{model}} | Hurrengo 7 egunak",
+        "noPredictions": "Ez dago iragarpenik lurzati honetarako",
+        "predictionsUnavailable": "Iragarpenak ez daude eskuragarri tenant honetarako"
     },
     "errors": {
         "loadFailed": "Errorea datuak kargatzean",
