Phases 2-5: dual persistence, STAC+SCL, TiTiler/Cesium, DataHub Arrow adapter
- Persistence: COG in MinIO (canonical path), zonal stats to TimescaleDB telemetry
- Idempotency: (entity_id, scene_id, index_type); acquisition_datetime from STAC
- Automation: STAC polling, vector mask SCL cloud validation, skipped_due_to_clouds
- Phase 4: GET /api/vegetation/viewer-url (presigned TiTiler); VegetationLayer Cesium
  only; remove tiles router, tiles.py, Deck.gl from ZoningLayer
- Phase 5: GET /api/timeseries/entities/{id}/data (Arrow IPC, ADAPTER_SPEC §11)
- Script: validate_arrow_timeseries_response.py for E2E validation

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -116,8 +116,7 @@
         "recentActivity": "Recent Activity",
         "noRecentActivity": "No recent activity.",
         "advancedConfig": "Advanced Configuration",
-        "vegetationAnalysis": "Vegetation Analysis",
-        "carbonCalcLUE": "Carbon Calculation (LUE)"
+        "vegetationAnalysis": "Vegetation Analysis"
     },
     "prescription": {
         "title": "Prescription Maps",
