--- a/src/i18n/locales/eu.json
+++ b/src/i18n/locales/eu.json
@@ -116,8 +116,7 @@
         "recentActivity": "Azken Jarduerak",
         "noRecentActivity": "Ez dago azken jarduerarik.",
         "advancedConfig": "Konfigurazio Aurreratua",
-        "vegetationAnalysis": "Landaretza Analisia",
-        "carbonCalcLUE": "Karbono Kalkulua (LUE)"
+        "vegetationAnalysis": "Landaretza Analisia"
     },
     "prescription": {
         "title": "Preskripzio Mapak",
