phase6: wizard, timeline and history alignment
- Add sparse availability endpoint and integrate it into the vegetation timeline
- Align setup wizard frequency wording, single-date calculation and advanced config with actual backend capabilities

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -100,6 +100,9 @@
     "configPanel": {
         "indexAndCalc": "Index & Calculation",
         "analysisPeriod": "Analysis Period",
+        "timelineFilterLabel": "Filter layers in timeline",
+        "calculateThisDate": "Calculate this date",
+        "forceLatestScene": "Use latest available scene",
         "recommendedIndex": "Recommended index:",
         "validIndices": "Valid: {{indices}}",
         "customFormula": "Custom Formula",
@@ -185,16 +188,19 @@
         "shortRange": "Short range ({{days}} days)",
         "shortRangeWarning": "Sentinel-2 passes every 5 days. With clouds, images may not be available. We recommend at least 14-21 days.",
         "indicesLabel": "Indices to calculate automatically",
-        "frequencyLabel": "Update frequency",
-        "weeklyRecommended": "Weekly (Recommended)",
-        "dailyCredits": "Daily (Uses more credits)",
+        "frequencyLabel": "Check frequency",
+        "frequencyHelp": "The system will check the satellite catalogue at this frequency; a new datum is only generated when the satellite passes and the scene is clear (Sentinel-2 ~5 days).",
+        "weeklyRecommended": "Weekly check (recommended)",
+        "dailyCredits": "Daily check",
+        "biweeklyOption": "Biweekly check",
         "summaryTitle": "Configuration Summary",
         "summaryParcel": "Parcel:",
         "summaryStartDate": "Historical Start:",
         "summaryIndices": "Indices:",
         "summaryFrequency": "Frequency:",
-        "summaryWeekly": "Weekly",
-        "summaryDaily": "Daily",
+        "summaryWeekly": "Weekly check",
+        "summaryDaily": "Daily check",
+        "summaryBiweekly": "Biweekly check",
         "activateDesc": "By clicking \"Activate\", the system will begin to:",
         "activateStep1": "Search for available historical satellite images.",
         "activateStep2": "Calculate the selected indices.",
