--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -100,6 +100,9 @@
     "configPanel": {
         "indexAndCalc": "Índice & Cálculo",
         "analysisPeriod": "Periodo de Análisis",
+        "timelineFilterLabel": "Filtrar capas en la timeline",
+        "calculateThisDate": "Calcular esta fecha",
+        "forceLatestScene": "Forzar última escena disponible",
         "recommendedIndex": "Índice recomendado:",
         "validIndices": "Válidos: {{indices}}",
         "customFormula": "Fórmula Personalizada",
@@ -185,16 +188,19 @@
         "shortRange": "Rango corto ({{days}} días)",
         "shortRangeWarning": "Sentinel-2 pasa cada 5 días. Con nubes, puede que no haya imágenes disponibles. Recomendamos mínimo 14-21 días.",
         "indicesLabel": "Índices a calcular automáticamente",
-        "frequencyLabel": "Frecuencia de actualización",
-        "weeklyRecommended": "Semanal (Recomendado)",
-        "dailyCredits": "Diaria (Consume más créditos)",
+        "frequencyLabel": "Frecuencia de comprobación",
+        "frequencyHelp": "El sistema comprobará el catálogo satelital según la frecuencia; solo se generará un dato nuevo cuando pase el satélite y la escena esté despejada (Sentinel-2 ~5 días).",
+        "weeklyRecommended": "Comprobación semanal (recomendado)",
+        "dailyCredits": "Comprobación diaria",
+        "biweeklyOption": "Comprobación quincenal",
         "summaryTitle": "Resumen de Configuración",
         "summaryParcel": "Parcela:",
         "summaryStartDate": "Inicio Histórico:",
         "summaryIndices": "Índices:",
         "summaryFrequency": "Frecuencia:",
-        "summaryWeekly": "Semanal",
-        "summaryDaily": "Diaria",
+        "summaryWeekly": "Comprobación semanal",
+        "summaryDaily": "Comprobación diaria",
+        "summaryBiweekly": "Comprobación quincenal",
         "activateDesc": "Al hacer clic en \"Activar\", el sistema comenzará a:",
         "activateStep1": "Buscar imágenes satelitales históricas disponibles.",
         "activateStep2": "Calcular los índices seleccionados.",
