--- a/src/i18n/locales/eu.json
+++ b/src/i18n/locales/eu.json
@@ -100,6 +100,9 @@
     "configPanel": {
         "indexAndCalc": "Indizea & Kalkulua",
         "analysisPeriod": "Analisi Aldia",
+        "timelineFilterLabel": "Iragazi geruzak timelinean",
+        "calculateThisDate": "Kalkulatu data hau",
+        "forceLatestScene": "Erabili eskuragarri dagoen azken eszena",
         "recommendedIndex": "Gomendatutako indizea:",
         "validIndices": "Baliozkoak: {{indices}}",
         "customFormula": "Formula Pertsonalizatua",
@@ -185,16 +188,19 @@
         "shortRange": "Tarte laburra ({{days}} egun)",
         "shortRangeWarning": "Sentinel-2 5 egunero pasatzen da. Lainoekin, baliteke irudirik ez egotea. Gutxienez 14-21 egun gomendatzen ditugu.",
         "indicesLabel": "Automatikoki kalkulatzeko indizeak",
-        "frequencyLabel": "Eguneratze maiztasuna",
-        "weeklyRecommended": "Astero (Gomendatua)",
-        "dailyCredits": "Egunero (Kreditu gehiago kontsumitzen du)",
+        "frequencyLabel": "Egiaztatze maiztasuna",
+        "frequencyHelp": "Sistemak katalogo satelitala maiztasun honetan egiaztatuko du; datu berri bat soilik sortuko da satelitea pasatzen denean eta eszena garbi denean (Sentinel-2 ~5 egun).",
+        "weeklyRecommended": "Egiaztatze astero (gomendatua)",
+        "dailyCredits": "Egiaztatze egunero",
+        "biweeklyOption": "Egiaztatze biastero",
         "summaryTitle": "Konfigurazio Laburpena",
         "summaryParcel": "Lurzatia:",
         "summaryStartDate": "Hasiera Historikoa:",
         "summaryIndices": "Indizeak:",
         "summaryFrequency": "Maiztasuna:",
-        "summaryWeekly": "Astero",
-        "summaryDaily": "Egunero",
+        "summaryWeekly": "Egiaztatze astero",
+        "summaryDaily": "Egiaztatze egunero",
+        "summaryBiweekly": "Egiaztatze biastero",
         "activateDesc": "\"Aktibatu\" sakatzen duzunean, sistema honako hauek egiten hasiko da:",
         "activateStep1": "Satelite irudi historiko eskuragarriak bilatu.",
         "activateStep2": "Hautatutako indizeak kalkulatu.",
